--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.lesports.gene.vct</groupId>
-    <artifactId>gene_vct_parent</artifactId>
+    <groupId>com.lunchtech.vlbs</groupId>
+    <artifactId>vlbs_lunchtech_parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
-    <name>gene_vct_parent</name>
+    <name>vlbs_lunchtech_parent</name>
 
     <modules>
         <module>service</module>
@@ -27,7 +27,9 @@
         <junit.version>4.12</junit.version>
         <commons-codec.version>1.10</commons-codec.version>
         <spring-boot-starter.version>1.2.6.RELEASE</spring-boot-starter.version>
-        
+        <mybatis.version>3.4.1</mybatis.version>
+        <spring-mybatis.version>1.3.0</spring-mybatis.version>
+
         <!-- utils -->
         <fastjson.version>1.2.5</fastjson.version>
         <common-lang.version>3.3.2</common-lang.version>
@@ -84,7 +86,16 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring-boot-starter.version}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${spring-mybatis.version}</version>
+        </dependency>
         
         <!--util-->
         <dependency>
@@ -165,7 +176,7 @@
     
     
     <build>
-        <finalName>gene_vct_common</finalName>
+        <finalName>vlbs_lunchtech_parent</finalName>
         <pluginManagement>
             <plugins>
                 <!-- compiler插件, 设定JDK版本 -->
