--- a/pom.xml
+++ b/pom.xml
@@ -9,24 +9,25 @@
     <name>vlbs_lunchtech_parent</name>
 
     <modules>
+        <module>common</module>
         <module>service</module>
         <module>admin</module>
         <module>api</module>
-        <module>common</module>
+        <module>uploader</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jdk.version>1.8</jdk.version>
-        <spring.version>4.1.8.RELEASE</spring.version>
+        <spring.version>5.0.1.RELEASE</spring.version>
         <spring.mongo.version>1.8.0.RELEASE</spring.mongo.version>
         <slf4j.version>1.7.5</slf4j.version>
         <jackson.version>2.5.1</jackson.version>
         <aspect.version>1.8.5</aspect.version>
         <junit.version>4.12</junit.version>
         <commons-codec.version>1.10</commons-codec.version>
-        <spring-boot-starter.version>1.2.6.RELEASE</spring-boot-starter.version>
+        <spring-boot-starter.version>1.5.8.RELEASE</spring-boot-starter.version>
         <mybatis.version>3.4.1</mybatis.version>
         <spring-mybatis.version>1.3.0</spring-mybatis.version>
 
@@ -56,10 +57,10 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<dependency>  
-	        <groupId>org.springframework</groupId>  
-	        <artifactId>spring-context-support</artifactId>  
-	        <version>${spring.version}</version>  
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context-support</artifactId>
+	        <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -71,11 +72,11 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-test</artifactId>-->
+			<!--<version>${spring.version}</version>-->
+		<!--</dependency>-->
 		<dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
@@ -84,6 +85,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>${spring-boot-starter.version}</version>
         </dependency>
         <dependency>
