--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ BIUmgmt\bin
 
 common/WebContent
 services/WebContent
-#api/WebContent
+#uploader/WebContent
 #admin/WebContent
 #BIUmgmt/WebContent
 
