--- a/pom.xml
+++ b/pom.xml
@@ -21,22 +21,21 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jdk.version>1.8</jdk.version>
         <spring.version>5.0.1.RELEASE</spring.version>
-        <spring.mongo.version>1.8.0.RELEASE</spring.mongo.version>
-        <slf4j.version>1.7.5</slf4j.version>
-        <jackson.version>2.5.1</jackson.version>
-        <aspect.version>1.8.5</aspect.version>
+        <spring.mongo.version>2.0.1.RELEASE</spring.mongo.version>
+        <slf4j.version>1.8.0-beta0</slf4j.version>
+        <jackson.version>2.9.2</jackson.version>
+        <aspect.version>1.8.12</aspect.version>
         <junit.version>4.12</junit.version>
-        <commons-codec.version>1.10</commons-codec.version>
+        <commons-codec.version>1.11</commons-codec.version>
         <spring-boot-starter.version>1.5.8.RELEASE</spring-boot-starter.version>
-        <mybatis.version>3.4.1</mybatis.version>
-        <spring-mybatis.version>1.3.0</spring-mybatis.version>
+        <mybatis.version>3.4.5</mybatis.version>
+        <spring-mybatis.version>1.3.1</spring-mybatis.version>
 
         <!-- utils -->
         <fastjson.version>1.2.5</fastjson.version>
         <common-lang.version>3.3.2</common-lang.version>
         <guava.version>18.0</guava.version>
         <httpclient.version>4.4</httpclient.version>
-        <logback.version>1.1.3</logback.version>
         <servlet.version>3.1.0</servlet.version>
         <joda-time.version>2.9</joda-time.version>
     </properties>
@@ -72,16 +71,16 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-test</artifactId>-->
-			<!--<version>${spring.version}</version>-->
-		<!--</dependency>-->
 		<dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-mongodb</artifactId>
-            <version>${spring.mongo.version}</version>
-        </dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-mongodb</artifactId>-->
+            <!--<version>${spring.mongo.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -91,6 +90,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>${spring-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -164,19 +169,6 @@
             <artifactId>httpcore</artifactId>
             <version>${httpclient.version}</version>
         </dependency>
-		
-		
-		<!-- 日志 -->
-        <dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
     </dependencies>
     
     
@@ -199,6 +191,10 @@
                             <verbose />
                         </compilerArguments>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                 </plugin>
             </plugins>
         </pluginManagement>
